After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677674 - Introspection fixes for Vala
Introspection fixes for Vala
Status: RESOLVED FIXED
Product: librsvg
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: librsvg maintainers
librsvg maintainers
Depends on:
Blocks: 677676
 
 
Reported: 2012-06-08 06:57 UTC by Evan Nemerson
Modified: 2012-06-13 02:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
introspection: assorted fixes to avoid Vala regressions (5.66 KB, patch)
2012-06-08 07:01 UTC, Evan Nemerson
none Details | Review
Update .gitignore to include lots more generated files (1.05 KB, patch)
2012-06-11 01:20 UTC, Evan Nemerson
accepted-commit_now Details | Review
Deprecate including headers other than rsvg.h (5.12 KB, patch)
2012-06-11 01:21 UTC, Evan Nemerson
accepted-commit_now Details | Review
introspection: assorted fixes to avoid Vala regressions (6.50 KB, patch)
2012-06-11 01:30 UTC, Evan Nemerson
accepted-commit_now Details | Review

Description Evan Nemerson 2012-06-08 06:57:22 UTC
I'm working on porting the Vala bindings over to GObject Introspection, and I've made a few changes in order to avoid regressions.
Comment 1 Evan Nemerson 2012-06-08 07:01:55 UTC
Created attachment 215909 [details] [review]
introspection: assorted fixes to avoid Vala regressions

The only thing comment-worthy is that I marked the title, desc, and metadata properties of RsvgHandle as deprecated.  The getters have already been marked as such, so I think these not being marked as deprecated was merely an oversight in the documentation.  If the properties themselves should not be considered deprecated I'd be happy to correct the patch.
Comment 2 Christian Persch 2012-06-08 12:08:32 UTC
Looks fine, except this one:

+Rsvg_@RSVG_API_VERSION_U@_gir_SCANNERFLAGS = $(foreach h,$(librsvginc_HEADERS),--c-include="librsvg/$(h)")

I'd rather we moved to a single-include header like glib, gtk etc "librsvg.h" that included all the other ones.

Oh, and also: let's have the vala bindings generation in librsvg upstream :-)
Comment 3 Evan Nemerson 2012-06-11 01:15:18 UTC
> I'd rather we moved to a single-include header like glib, gtk etc "librsvg.h"
> that included all the other ones.

Sounds good to me.  Instead of creating a new librsvg.h, why not just use rsvg.h?  I'm guessing the vast majority of librsvg users are including it already, and probably the majority are including only that and nothing else.  For them, the change could be completely transparent.

> Oh, and also: let's have the vala bindings generation in librsvg upstream :-)

Excellent.  I'll move bug #677676 over from Vala and we can discuss it there.
Comment 4 Evan Nemerson 2012-06-11 01:20:26 UTC
Created attachment 216080 [details] [review]
Update .gitignore to include lots more generated files

Unrelated, but it felt rather trivial for a whole new bug report.
Comment 5 Evan Nemerson 2012-06-11 01:21:22 UTC
Created attachment 216081 [details] [review]
Deprecate including headers other than rsvg.h

Something like this?
Comment 6 Evan Nemerson 2012-06-11 01:30:04 UTC
Created attachment 216082 [details] [review]
introspection: assorted fixes to avoid Vala regressions

Updated version for a single librsvg/rsvg.h include.
Comment 7 Christian Persch 2012-06-11 20:15:13 UTC
Comment on attachment 216081 [details] [review]
Deprecate including headers other than rsvg.h

Yes, looks good.
Comment 8 Evan Nemerson 2012-06-13 02:59:24 UTC
commit f8e7e259a7d617a4d9244ee0183ca1dc1dbfb5a4
Author: Evan Nemerson <evan@coeus-group.com>
Date:   Sun Jun 10 18:28:34 2012 -0700

    introspection: assorted fixes to avoid Vala regressions
    
    https://bugzilla.gnome.org/show_bug.cgi?id=677674

commit 3b8adaa7e780b85695306292dfb23107d219bb34
Author: Evan Nemerson <evan@coeus-group.com>
Date:   Sun Jun 10 18:17:58 2012 -0700

    Deprecate including headers other than rsvg.h

commit a4a7c412f46d9cd11bb5884840a592fb2df0db0c
Author: Evan Nemerson <evan@coeus-group.com>
Date:   Fri Jun 8 16:07:34 2012 -0700

    Update .gitignore to include lots more generated files