introspection: assorted fixes to avoid Vala regressions

https://bugzilla.gnome.org/show_bug.cgi?id=677674